--- a/Cafeine/Views/MainPage.xaml
+++ b/Cafeine/Views/MainPage.xaml
@@ -38,18 +38,20 @@
         </Grid.RowDefinitions>
         <GridView
             x:Name="collection"
+            Grid.RowSpan="2"
             Margin="28,0,0,0"
+            Canvas.ZIndex="-1"
             ContainerContentChanging="Collection_ContainerContentChanging"
             IsItemClickEnabled="True"
             ItemContainerStyle="{StaticResource CollectionItemContainerStyle}"
             ItemTemplate="{StaticResource Collection}"
-            ItemsSource="{x:Bind Vm.Library, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-            <GridView.ItemContainerTransitions>
-                <TransitionCollection>
-                    <ContentThemeTransition />
-                    <EntranceThemeTransition IsStaggeringEnabled="True"/>
-                </TransitionCollection>
-            </GridView.ItemContainerTransitions>
+            ItemsSource="{x:Bind Vm.Library, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            Template="{StaticResource CustomizedCollectionGridView}">
+            <GridView.Header>
+                <StackPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+                    <TextBlock Text="HELLO" />
+                </StackPanel>
+            </GridView.Header>
             <interactivity:Interaction.Behaviors>
                 <core:EventTriggerBehavior EventName="ItemClick">
                     <reactiveProperty:EventToReactiveCommand Command="{x:Bind Path=Vm.ItemClicked}">
