[Add] Implement AddItem method
[Add] Implement transitions for episode lists

[Fix] Account list not loaded on home button

[Fix] Episode lists won't load if it hasn't been filled

[Change] Remove unused functions

[Change] Refactor some parts

--- a/Cafeine/Views/HomePage.xaml
+++ b/Cafeine/Views/HomePage.xaml
@@ -150,7 +150,7 @@
                                                     </ImageBrush>
                                                 </Ellipse.Fill>
                                             </Ellipse>
-                                            <TextBlock Text="{x:Bind Path=Vm.AvatarURL.Name}" />
+                                            <TextBlock Text="{x:Bind Path=Vm.AvatarURL.Name, Mode=OneWay}" />
                                         </StackPanel>
                                     </Button.Content>
                                 </Button>
