--- a/Cafeine/Views/Resources/CafeineTemplateDesign.xaml
+++ b/Cafeine/Views/Resources/CafeineTemplateDesign.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:m="using:Cafeine.Models">
-
     <ResourceDictionary.ThemeDictionaries>
         <ResourceDictionary x:Key="Light">
             <RevealBorderBrush
@@ -19,7 +18,7 @@
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
 
-
+    <!--  Template for MainPage.xaml  -->
     <DataTemplate x:Name="Collection" x:DataType="m:ItemLibraryModel">
         <Grid
             x:Name="item"
@@ -55,9 +54,26 @@
                 Margin="2,2,2,0"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
+                ImageOpened="CoverImage_ImageOpened"
                 Opacity="0"
                 RelativePanel.AlignLeftWithPanel="True"
-                Stretch="Fill" />
+                Stretch="Fill">
+                <Image.Resources>
+                    <Storyboard x:Key="ImageOpened">
+                        <DoubleAnimation
+                            Storyboard.TargetName="CoverImage"
+                            Storyboard.TargetProperty="Opacity"
+                            From="0"
+                            To="1"
+                            Duration="0:0:0.7">
+                            <DoubleAnimation.EasingFunction>
+                                <ExponentialEase EasingMode="EaseOut" Exponent="7" />
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                    </Storyboard>
+                </Image.Resources>
+            </Image>
+
             <TextBlock
                 x:Name="thetitle"
                 Grid.Row="1"
@@ -108,7 +124,7 @@
             </Grid>-->
     </DataTemplate>
     <Style x:Key="CollectionItemContainerStyle" TargetType="GridViewItem">
-        <Setter Property="Margin" Value="0,20,8,0" />
+        <Setter Property="Margin" Value="0,20,4,0" />
         <Setter Property="ContentTransitions">
             <Setter.Value>
                 <!--
@@ -160,6 +176,7 @@
                             ContentTransitions="{TemplateBinding HeaderTransitions}" />
                     </Grid>
                     <ItemsPresenter
+                        Margin="0,20,28,0"
                         Padding="{TemplateBinding Padding}"
                         Canvas.ZIndex="0"
                         Footer="{TemplateBinding Footer}"
