--- a/Cafeine/Views/Resources/CafeineTemplateDesign.xaml
+++ b/Cafeine/Views/Resources/CafeineTemplateDesign.xaml
@@ -583,6 +583,210 @@
         </Setter>
     </Style>
 
+    <!--  Modified version of ComboBox  -->
+    <ControlTemplate x:Key="CustomizedComboBox" TargetType="ComboBox">
+        <Grid x:Name="LayoutRoot">
+            <Grid.Resources>
+                <Storyboard x:Key="OverlayOpeningAnimation">
+                    <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="Opacity">
+                        <DiscreteDoubleKeyFrame KeyTime="0:0:0" Value="0.0" />
+                        <SplineDoubleKeyFrame
+                            KeySpline="0.1,0.9 0.2,1.0"
+                            KeyTime="0:0:0.383"
+                            Value="1.0" />
+                    </DoubleAnimationUsingKeyFrames>
+                </Storyboard>
+                <Storyboard x:Key="OverlayClosingAnimation">
+                    <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="Opacity">
+                        <DiscreteDoubleKeyFrame KeyTime="0:0:0" Value="1.0" />
+                        <SplineDoubleKeyFrame
+                            KeySpline="0.1,0.9 0.2,1.0"
+                            KeyTime="0:0:0.216"
+                            Value="0.0" />
+                    </DoubleAnimationUsingKeyFrames>
+                </Storyboard>
+            </Grid.Resources>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Border
+                x:Name="HighlightBackground"
+                Grid.ColumnSpan="2"
+                Background="{ThemeResource ComboBoxBackgroundUnfocused}"
+                Canvas.ZIndex="1"
+                Opacity="0" />
+            <ContentPresenter
+                x:Name="HeaderContentPresenter"
+                Grid.Column="0"
+                Margin="0"
+                HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
+                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                x:DeferLoadStrategy="Lazy"
+                Canvas.ZIndex="0"
+                Content="{TemplateBinding Header}"
+                ContentTemplate="{TemplateBinding HeaderTemplate}"
+                FlowDirection="{TemplateBinding FlowDirection}"
+                FontWeight="{ThemeResource ComboBoxHeaderThemeFontWeight}"
+                TextWrapping="Wrap"
+                Visibility="Collapsed" />
+            <ContentPresenter
+                x:Name="ContentPresenter"
+                Grid.Column="1"
+                Margin="4,0"
+                HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
+                VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
+                <TextBlock x:Name="PlaceholderTextBlock" Text="{TemplateBinding PlaceholderText}" />
+            </ContentPresenter>
+            <Popup x:Name="Popup">
+                <Border
+                    x:Name="PopupBorder"
+                    Margin="0,-1,0,-1"
+                    Padding="{ThemeResource ComboBoxDropdownBorderPadding}"
+                    HorizontalAlignment="Stretch"
+                    Background="{ThemeResource ComboBoxDropDownBackground}"
+                    BorderBrush="{ThemeResource ComboBoxDropDownBorderBrush}"
+                    BorderThickness="{ThemeResource ComboBoxDropdownBorderThickness}">
+                    <ScrollViewer
+                        x:Name="ScrollViewer"
+                        MinWidth="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TemplateSettings.DropDownContentMinWidth}"
+                        AutomationProperties.AccessibilityView="Raw"
+                        BringIntoViewOnFocusChange="{TemplateBinding ScrollViewer.BringIntoViewOnFocusChange}"
+                        Foreground="{ThemeResource ComboBoxDropDownForeground}"
+                        HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
+                        HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}"
+                        IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}"
+                        IsHorizontalRailEnabled="{TemplateBinding ScrollViewer.IsHorizontalRailEnabled}"
+                        IsVerticalRailEnabled="{TemplateBinding ScrollViewer.IsVerticalRailEnabled}"
+                        VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}"
+                        VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}"
+                        VerticalSnapPointsAlignment="Near"
+                        VerticalSnapPointsType="OptionalSingle"
+                        ZoomMode="Disabled">
+                        <ItemsPresenter Margin="{ThemeResource ComboBoxDropdownContentMargin}" />
+                    </ScrollViewer>
+                </Border>
+            </Popup>
+
+            <VisualStateManager.VisualStateGroups>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal">
+                        <Storyboard>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Opacity">
+                                <DiscreteObjectKeyFrame Value="0.7" />
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualState>
+
+                    <VisualState x:Name="PointerOver">
+                        <Storyboard>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Opacity">
+                                <DiscreteObjectKeyFrame Value="0.5" />
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualState>
+
+
+                    <VisualState x:Name="Pressed">
+                        <Storyboard>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Opacity">
+                                <DiscreteObjectKeyFrame Value="0.3" />
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualState>
+
+
+                    <VisualState x:Name="Disabled">
+
+                        <Storyboard>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="HeaderContentPresenter" Storyboard.TargetProperty="Foreground">
+                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ComboBoxForegroundDisabled}" />
+                            </ObjectAnimationUsingKeyFrames>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ComboBoxForegroundDisabled}" />
+                            </ObjectAnimationUsingKeyFrames>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="PlaceholderTextBlock" Storyboard.TargetProperty="Foreground">
+                                <DiscreteObjectKeyFrame KeyTime="0" Value="{Binding PlaceholderForeground, RelativeSource={RelativeSource TemplatedParent}, TargetNullValue={ThemeResource ComboBoxForegroundDisabled}}" />
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualState>
+
+                </VisualStateGroup>
+                <VisualStateGroup x:Name="FocusStates">
+                    <VisualState x:Name="Focused">
+
+                        <Storyboard>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ComboBoxForegroundFocused}" />
+                            </ObjectAnimationUsingKeyFrames>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="PlaceholderTextBlock" Storyboard.TargetProperty="Foreground">
+                                <DiscreteObjectKeyFrame KeyTime="0" Value="{Binding PlaceholderForeground, RelativeSource={RelativeSource TemplatedParent}, TargetNullValue={ThemeResource ComboBoxForegroundFocused}}" />
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualState>
+                    <VisualState x:Name="FocusedPressed">
+
+                        <Storyboard>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ComboBoxForegroundFocusedPressed}" />
+                            </ObjectAnimationUsingKeyFrames>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="PlaceholderTextBlock" Storyboard.TargetProperty="Foreground">
+                                <DiscreteObjectKeyFrame KeyTime="0" Value="{Binding PlaceholderForeground, RelativeSource={RelativeSource TemplatedParent}, TargetNullValue={ThemeResource ComboBoxPlaceHolderForegroundFocusedPressed}}" />
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualState>
+                    <VisualState x:Name="Unfocused" />
+                    <VisualState x:Name="PointerFocused" />
+                    <VisualState x:Name="FocusedDropDown">
+
+                        <Storyboard>
+                            <ObjectAnimationUsingKeyFrames
+                                Storyboard.TargetName="PopupBorder"
+                                Storyboard.TargetProperty="Visibility"
+                                Duration="0">
+                                <DiscreteObjectKeyFrame KeyTime="0">
+                                    <DiscreteObjectKeyFrame.Value>
+                                        <Visibility>Visible</Visibility>
+                                    </DiscreteObjectKeyFrame.Value>
+                                </DiscreteObjectKeyFrame>
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualState>
+
+                </VisualStateGroup>
+                <VisualStateGroup x:Name="DropDownStates">
+                    <VisualState x:Name="Opened">
+
+                        <Storyboard>
+                            <SplitOpenThemeAnimation
+                                ClosedTargetName="ContentPresenter"
+                                OffsetFromCenter="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TemplateSettings.DropDownOffset}"
+                                OpenedLength="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TemplateSettings.DropDownOpenedHeight}"
+                                OpenedTargetName="PopupBorder" />
+                        </Storyboard>
+                    </VisualState>
+                    <VisualState x:Name="Closed">
+
+                        <Storyboard>
+                            <SplitCloseThemeAnimation
+                                ClosedTargetName="ContentPresenter"
+                                OffsetFromCenter="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TemplateSettings.DropDownOffset}"
+                                OpenedLength="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=TemplateSettings.DropDownOpenedHeight}"
+                                OpenedTargetName="PopupBorder" />
+                        </Storyboard>
+                    </VisualState>
+
+                </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
+        </Grid>
+
+    </ControlTemplate>
+
     <!--  Microsoft Forgot to make AppbarButton's border to be flexible.  -->
     <!--  Also a good opportunity to make a reduced version of AppBarButton :p  -->
     <Thickness x:Key="AppBarButtonContentViewboxCompactMargin">0</Thickness>
