--- a/Cafeine/Views/SearchPage.xaml
+++ b/Cafeine/Views/SearchPage.xaml
@@ -19,9 +19,28 @@
         </ResourceDictionary>
     </Page.Resources>
     <Grid>
+        <StackPanel
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Opacity="0.5"
+            Orientation="Vertical">
+            <FontIcon
+                Margin="0,12"
+                FontSize="32"
+                Glyph="&#xE11A;" />
+            <TextBlock FontSize="18" Text="Ravioli ravioli..." />
+        </StackPanel>
         <ScrollViewer>
-            <StackPanel Orientation="Vertical">
-                <TextBlock Text="In your library" />
+            <StackPanel
+                x:Name="results"
+                Margin="28,0,0,0"
+                x:Load="{x:Bind Vm.LoadResults, Mode=OneWay}"
+                Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+                Orientation="Vertical">
+                <TextBlock
+                    FontSize="20"
+                    FontWeight="SemiBold"
+                    Text="From library" />
                 <GridView ItemsSource="{x:Bind Vm.OfflineResults, Mode=OneWay}">
                     <GridView.ItemTemplate>
                         <DataTemplate x:DataType="m:ItemLibraryModel">
@@ -31,16 +50,16 @@
                         </DataTemplate>
                     </GridView.ItemTemplate>
                 </GridView>
-                <TextBlock Text="Online results" />
-                <GridView ItemsSource="{x:Bind Vm.OnlineResults, Mode=OneWay}">
-                    <GridView.ItemTemplate>
-                        <DataTemplate x:DataType="m:ItemLibraryModel">
-                            <Grid>
-                                <TextBlock Text="{x:Bind Path=Service['default'].Title, Mode=OneWay}" />
-                            </Grid>
-                        </DataTemplate>
-                    </GridView.ItemTemplate>
-                </GridView>
+                <TextBlock
+                    FontSize="20"
+                    FontWeight="SemiBold"
+                    Text="Online results" />
+                <GridView
+                    x:Name="onlineresultgridview"
+                    ContainerContentChanging="GridView_ContainerContentChanging"
+                    ItemTemplate="{StaticResource OnlineSearchResult}"
+                    ItemsSource="{x:Bind Vm.OnlineResults, Mode=OneWay}" />
+                <ProgressRing HorizontalAlignment="Left" IsActive="{x:Bind Vm.OnlineResultsProgressRing, Mode=OneWay}" />
             </StackPanel>
 
         </ScrollViewer>
