--- a/Cafeine/Views/SearchPage.xaml
+++ b/Cafeine/Views/SearchPage.xaml
@@ -33,7 +33,7 @@
         <ScrollViewer>
             <StackPanel
                 x:Name="results"
-                Margin="28,0,0,0"
+                Margin="28,14,0,0"
                 x:Load="{x:Bind Vm.LoadResults, Mode=OneWay}"
                 Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
                 Orientation="Vertical">
@@ -41,6 +41,12 @@
                     FontSize="20"
                     FontWeight="SemiBold"
                     Text="From library" />
+                <TextBlock
+                    x:Name="offlinenomatches"
+                    Margin="0,0,0,28"
+                    x:Load="{x:Bind Vm.OfflineResultsNoMatches, Mode=OneWay}"
+                    Opacity="0.8"
+                    Text="No matches found." />
                 <GridView ItemsSource="{x:Bind Vm.OfflineResults, Mode=OneWay}">
                     <GridView.ItemTemplate>
                         <DataTemplate x:DataType="m:ItemLibraryModel">
@@ -54,6 +60,11 @@
                     FontSize="20"
                     FontWeight="SemiBold"
                     Text="Online results" />
+                <TextBlock
+                    x:Name="onlinenomatches"
+                    x:Load="{x:Bind Vm.OnlineResultsNoMatches, Mode=OneWay}"
+                    Opacity="0.8"
+                    Text="No matches found." />
                 <GridView
                     x:Name="onlineresultgridview"
                     ContainerContentChanging="GridView_ContainerContentChanging"
