--- a/Cafeine/Views/HomePage.xaml
+++ b/Cafeine/Views/HomePage.xaml
@@ -80,7 +80,7 @@
                     VerticalAlignment="Center"
                     FontSize="17"
                     FontWeight="SemiBold"
-                    Text="Details" />
+                    Text="{x:Bind Vm.NavigationTitle.Value, Mode=OneWay}" />
             </StackPanel>
             <StackPanel
                 Grid.Column="1"
@@ -94,22 +94,15 @@
                     Height="36"
                     Margin="0,0,6,6"
                     VerticalAlignment="Bottom"
-                    LostFocus="SearchBox_LostFocus"
+                    local:FocusExtension.IsFocused="{x:Bind Vm.SearchBoxFocus.Value, Mode=TwoWay}"
                     PlaceholderText="I'm looking for..."
                     ScrollViewer.BringIntoViewOnFocusChange="False"
                     Style="{StaticResource FluentTextBoxStyle}"
                     Text="{x:Bind Vm.SuggestText.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    TextChanged="SearchBox_TextChanged"
-                    Visibility="Collapsed">
+                    Visibility="{x:Bind Vm.SearchBoxLoad.Value, Mode=OneWay}">
                     <interactivity:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="TextChanged">
                             <reactiveProperty:EventToReactiveCommand Command="{x:Bind Path=Vm.SearchBoxTextChanged}" />
-                        </core:EventTriggerBehavior>
-                        <core:EventTriggerBehavior EventName="GotFocus">
-                            <reactiveProperty:EventToReactiveCommand Command="{x:Bind Path=Vm.SearchBoxGotFocused}" />
-                        </core:EventTriggerBehavior>
-                        <core:EventTriggerBehavior EventName="LostFocus">
-                            <reactiveProperty:EventToReactiveCommand Command="{x:Bind Path=Vm.SearchBoxLostFocused}" />
                         </core:EventTriggerBehavior>
                     </interactivity:Interaction.Behaviors>
                 </TextBox>
@@ -118,11 +111,13 @@
                     Width="48"
                     Height="48"
                     VerticalAlignment="Bottom"
-                    Click="AppBarButton_Click"
-                    Style="{StaticResource ReducedAppBarButtonRevealStyle}">
-                    <AppBarButton.Content>
-                        <FontIcon Glyph="&#xE11A;" />
-                    </AppBarButton.Content>
+                    x:Load="{x:Bind Vm.SearchButtonLoad.Value, Mode=OneWay}"
+                    Command="{x:Bind Vm.SearchButtonClicked}"
+                    Style="{StaticResource ReducedAppBarButtonRevealStyle}"
+                    ToolTipService.ToolTip="Search">
+                    <AppBarButton.Icon>
+                        <FontIcon Margin="4" Glyph="&#xE11A;" />
+                    </AppBarButton.Icon>
                 </AppBarButton>
                 <AppBarButton
                     Width="48"
