--- a/Cafeine/Views/SearchPage.xaml
+++ b/Cafeine/Views/SearchPage.xaml
@@ -2,14 +2,19 @@
     x:Class="Cafeine.Views.SearchPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="using:Cafeine.Models.Conversions"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:local="using:Cafeine.Views"
     xmlns:m="using:Cafeine.Models"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="using:Prism.Windows.Mvvm"
+    xmlns:reactiveProperty="using:Reactive.Bindings.Interactivity"
     xmlns:vr="using:Cafeine.Views.Resources"
     prism:ViewModelLocator.AutoWireViewModel="True"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    NavigationCacheMode="Enabled"
     mc:Ignorable="d">
     <Page.Resources>
         <ResourceDictionary>
@@ -47,7 +52,7 @@
                     x:Load="{x:Bind Vm.OfflineResultsNoMatches, Mode=OneWay}"
                     Opacity="0.8"
                     Text="No matches found." />
-                <GridView ItemsSource="{x:Bind Vm.OfflineResults, Mode=OneWay}">
+                <GridView IsItemClickEnabled="True" ItemsSource="{x:Bind Vm.OfflineResults, Mode=OneWay}">
                     <GridView.ItemTemplate>
                         <DataTemplate x:DataType="m:ItemLibraryModel">
                             <Grid>
@@ -55,6 +60,13 @@
                             </Grid>
                         </DataTemplate>
                     </GridView.ItemTemplate>
+                    <interactivity:Interaction.Behaviors>
+                        <core:EventTriggerBehavior EventName="ItemClick">
+                            <reactiveProperty:EventToReactiveCommand Command="{x:Bind Path=Vm.ItemClicked}">
+                                <conv:ItemClickToItemLibraryModel />
+                            </reactiveProperty:EventToReactiveCommand>
+                        </core:EventTriggerBehavior>
+                    </interactivity:Interaction.Behaviors>
                 </GridView>
                 <TextBlock
                     FontSize="20"
@@ -68,8 +80,17 @@
                 <GridView
                     x:Name="onlineresultgridview"
                     ContainerContentChanging="GridView_ContainerContentChanging"
+                    IsItemClickEnabled="True"
                     ItemTemplate="{StaticResource OnlineSearchResult}"
-                    ItemsSource="{x:Bind Vm.OnlineResults, Mode=OneWay}" />
+                    ItemsSource="{x:Bind Vm.OnlineResults, Mode=OneWay}">
+                    <interactivity:Interaction.Behaviors>
+                        <core:EventTriggerBehavior EventName="ItemClick">
+                            <reactiveProperty:EventToReactiveCommand Command="{x:Bind Path=Vm.ItemClicked}">
+                                <conv:ItemClickToItemLibraryModel />
+                            </reactiveProperty:EventToReactiveCommand>
+                        </core:EventTriggerBehavior>
+                    </interactivity:Interaction.Behaviors>
+                </GridView>
                 <ProgressRing HorizontalAlignment="Left" IsActive="{x:Bind Vm.OnlineResultsProgressRing, Mode=OneWay}" />
             </StackPanel>
 
